--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -13,7 +13,8 @@
 
 .main {
     margin: 0 auto;
-    width: 600px;
+    width: 320px;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,4 +55,9 @@
     border-radius: 10px;
     margin: 5px;
     padding: 5px;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: #C0AD24;
 }
